--- a/app/src/main/res/layout/fragment_sign_payload.xml
+++ b/app/src/main/res/layout/fragment_sign_payload.xml
@@ -8,6 +8,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="18dp"
+    android:layout_marginHorizontal="12dp"
     tools:context=".ui.signpayload.SignPayloadFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
