--- a/app/src/main/res/layout/fragment_sign_payload.xml
+++ b/app/src/main/res/layout/fragment_sign_payload.xml
@@ -10,6 +10,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="18dp"
     android:layout_marginHorizontal="12dp"
+    android:paddingBottom="8dp"
     tools:context=".ui.signpayload.SignPayloadFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
